--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,6 @@
 	"homepage": "https://github.com/asaferamos/woocommerce-correios-rastreio-parser",
 	"type": "wordpress-plugin",
     "license": "GPL3",
-    "repositories": [
-        {
-          "url": "https://github.com/asaferamos/correios-rastreio-api-parser.git",
-          "type": "git"
-        }
-    ],
     "authors": [
         {
             "name": "Asafe Ramos",
@@ -19,6 +13,6 @@
         }
     ],
     "require": {
-        "baru/correios": "dev-master"
+        "baru/correios": "1.0.0"
     }
 }
